<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- HEADER -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#1F3A68"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:src="@android:drawable/ic_media_previous"
                android:contentDescription="@string/back"/>

            <ImageButton
                android:id="@+id/btnHome"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_house"
                android:contentDescription="@string/home"/>
        </RelativeLayout>

        <!-- LOGO -->

        <!-- TITLE -->
        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:contentDescription="@drawable/logo_utc2"
            android:src="@drawable/logo_utc2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuition_result"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="#1F3A68"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <!-- CARD -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hp_hkii"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_date"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_money"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_method"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>